# RealTimeFaceSwap

./: .gitignore  20240614-pool.py  20240614-pool2.py  FaceRestorationHelperWrapper.py  PicklableTemplate.py  README.md  callFaceRestorationHelper.py  inference_codeformer_function.py  insightface-sample.py  main.py  requirements.txt  restoration.py  single-thread.py
Script/: Face.py  PicklableInswapper.py  PicklableRetinaFace.py  Pickle.py  faceAnalysis.py  getModel.py
prototypes/: 20240613-prototype.py  20240614-manager.py  20240617-gpt.py  model.py  multi-process-test.py  multi-process.py  test-multiprocess.py
prototypes/Script/: PicklableArcFace.py  PicklableRetinaFace.py  PicklableTemplate.py  Pickle.py  RetinaFace.py  main.py
prototypes/Script/cpp_version/: CMakeLists.txt  main.cpp
